force-app/main/default/objects/QueueCallEvent__e/QueueCallEvent__e.object-meta.xml
<CustomObject>
    <label>Queue Call Event</label>
    <pluralLabel>Queue Call Events</pluralLabel>
</CustomObject>