force-app/main/default/objects/QueueCallEvent__e/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <label>Call Type</label>
    <type>Text</type>
    <length>100</length>
    <isFilteringField>false</isFilteringField>
    <isSortingField>false</isSortingField>
</CustomField>