force-app/main/default/objects/QueueCallEvent__e/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>Object Type</label>
    <type>Text</type>
    <length>50</length>
    <isFilteringField>false</isFilteringField>
    <isSortingField>false</isSortingField>
</CustomField>