force-app/main/default/objects/QueueCallEvent__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>Record Id</label>
    <type>Text</type>
    <length>18</length>
    <isFilteringField>false</isFilteringField>
    <isSortingField>false</isSortingField>
</CustomField>